--- a/pages/customer/product.html
+++ b/pages/customer/product.html
@@ -139,7 +139,7 @@
                                             class="fa-sharp fa-solid fa-peso-sign"></i>300/kg</p>
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
-                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                            class="btn btn-success btn-sm mt-3 mx-2">BUY</button>
                                         <button data-bs-toggle="modal" data-bs-target="#reserve"
                                             class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
@@ -156,7 +156,7 @@
                                             class="fa-sharp fa-solid fa-peso-sign"></i>350/kg</p>
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
-                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                            class="btn btn-success btn-sm mt-3 mx-2">BUY</button>
                                         <button data-bs-toggle="modal" data-bs-target="#reserve"
                                             class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
@@ -173,7 +173,7 @@
                                             class="fa-sharp fa-solid fa-peso-sign"></i>200/kg</p>
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
-                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                            class="btn btn-success btn-sm mt-3 mx-2">BUY</button>
                                         <button data-bs-toggle="modal" data-bs-target="#reserve"
                                             class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
@@ -190,7 +190,7 @@
                                             class="fa-sharp fa-solid fa-peso-sign"></i>250/kg</p>
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
-                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                            class="btn btn-success btn-sm mt-3 mx-2">BUY</button>
                                         <button data-bs-toggle="modal" data-bs-target="#reserve"
                                             class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
@@ -207,7 +207,7 @@
                                             class="fa-sharp fa-solid fa-peso-sign"></i>300/kg</p>
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
-                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                            class="btn btn-success btn-sm mt-3 mx-2">BUY</button>
                                         <button data-bs-toggle="modal" data-bs-target="#reserve"
                                             class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
@@ -225,7 +225,7 @@
                                             
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
-                                            class="btn btn-success btn-sm mt-3 mx-2">Order</button>
+                                            class="btn btn-success btn-sm mt-3 mx-2">BUY</button>
                                         <button data-bs-toggle="modal" data-bs-target="#reserve"
                                             class="btn btn-warning btn-sm mt-3 mx-2">Reserve</button>
                                     </div>
