--- a/pages/owner/p-owner.html
+++ b/pages/owner/p-owner.html
@@ -62,42 +62,42 @@
 
         <!-- Start Bottom Tab -->
         <div class="content">
-            <div class="bottom-navigation">
+           <div class="bottom-navigation">
                 <nav>
                     <div class="nav container">
                         <div class="nav__menu" id="nav-menu">
                             <ul class="nav__list list-unstyled">
 
                                 <li class="nav__item">
-                                    <a href="/pages/customer/home.html" class="nav__link text-decoration-none">
-                                        <i class="bi bi-house-door-fill nav__icon"></i>
+                                    <a href="/pages/owner/p-owner.html" class="nav__link text-decoration-none">
+                                        <i class="bi bi-diagram-3-fill nav__icon"></i>
                                         <span class="nav__name">Product</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
-                                    <a href="/pages/customer/gallery.html" class="nav__link text-decoration-none">
-                                        <i class="bi bi-images nav__icon"></i>
+                                    <a href="/pages/owner/o-owner.html" class="nav__link text-decoration-none">
+                                        <i class="bi bi-cart-fill nav__icon"></i>
                                         <span class="nav__name">Order</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
-                                    <a href="/pages/customer/about.html" class="nav__link text-decoration-none">
-                                        <i class="bi bi-people-fill nav__icon"></i>
+                                    <a href="/pages/owner/b-owner.html" class="nav__link text-decoration-none">
+                                        <i class="bi bi-basket-fill nav__icon"></i>
                                         <span class="nav__name">Basket</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
-                                    <a href="/pages/customer/services.html" class="nav__link text-decoration-none">
-                                        <i class="bi bi-gear-wide nav__icon"></i>
+                                    <a href="/pages/owner/m-owner.html" class="nav__link text-decoration-none">
+                                        <i class="bi bi-chat-dots-fill nav__icon"></i>
                                         <span class="nav__name">Message</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
-                                    <a href="/pages/customer/profile.html" class="nav__link text-decoration-none">
+                                    <a href="/pages/owner/pro-owner.html" class="nav__link text-decoration-none">
                                         <i class="bi bi-person-circle nav__icon"></i>
                                         <span class="nav__name">Profile</span>
                                     </a>
@@ -163,11 +163,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-12 col-lg-4 mb-2">
+                        <div class="col-12 col-md-12 col-lg-4 mb-5">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
                                     <div>
-
                                         <button class="btn btn-success btn-sm mt-3 mx-2" data-bs-target="#add"
                                             data-bs-toggle="modal">Add
                                             Product</button>
