--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img alt="..." class="d-block w-100" src="images/bangus.jpg">
+					<img alt="..." class="d-block w-100" src="images/caro-3.jpg">
 					<div class="carousel-caption">
 						<h5>CHARLYN'S SEAFOOD ESSENTIALS</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt
-							excepturi quas vero.</p>
+						<p>From time to time, treat yourself with some seafood.</p>
 						<button data-bs-toggle="modal" data-bs-target="#register"
 							class="btn btn-outline-light mt-3 mx-2">Get Started</button>
 						<button data-bs-toggle="modal" data-bs-target="#login"
@@ -67,11 +66,10 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img alt="..." class="d-block w-100" src="images/Danggit.jpg">
+					<img alt="..." class="d-block w-100" src="images/car-2.jpg">
 					<div class="carousel-caption">
 						<h5>CHARLYN'S SEAFOOD ESSENTIALS</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt
-							excepturi quas vero.</p>
+						<p>A bad day eating seafood is better than a good day eating anything else.</p>
 						<button data-bs-toggle="modal" data-bs-target="#register"
 							class="btn btn-outline-light mt-3 mx-2">Get Started</button>
 						<button data-bs-toggle="modal" data-bs-target="#login"
@@ -79,11 +77,10 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img alt="..." class="d-block w-100" src="images/Danggit.jpg">
+					<img alt="..." class="d-block w-100" src="images/caro-1.jpg">
 					<div class="carousel-caption">
 						<h5>CHARLYN'S SEAFOOD ESSENTIALS</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt
-							excepturi quas vero.</p>
+						<p>Celebrating being alive with Seafood.</p>
 						<button data-bs-toggle="modal" data-bs-target="#register"
 							class="btn btn-outline-light mt-3 mx-2">Get Started</button>
 						<button data-bs-toggle="modal" data-bs-target="#login"
@@ -182,7 +179,7 @@
 				<div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
 					<div class="about-text">
 						<h2>Welcome to our Seafood Website</h2>
-						<p class="text-start">where we offer a wide selection of fresh and high-quality seafood
+						<p class="text-start">Where we offer a wide selection of fresh and high-quality seafood
 							products, which means a variety of options in one place.
 							This is designed to make it easy for you to browse through our extensive range of seafood
 							products and make your purchase with just a few clicks. <br> <br>
@@ -208,8 +205,7 @@
 				<div class="col-md-12">
 					<div class="section-header text-center pb-5">
 						<h1 class="fw-bold">Our Products</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur<br>
-							adipisicing elit. Non, quo.</p>
+						<p>Those available product is high-quality and worth to order, get yours now!</p>
 					</div>
 				</div>
 			</div>
@@ -315,8 +311,8 @@
 				<div class="col-md-12">
 					<div class="section-header text-center pb-5">
 						<h1 class="fw-bold">About Us</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur<br>
-							adipisicing elit. Non, quo.</p>
+						<p>We CSE Owner will give the best product,<br>
+							We assure you for high-quality.</p>
 					</div>
 				</div>
 			</div>
@@ -366,8 +362,6 @@
 				<div class="col-md-12">
 					<div class="section-header text-center pb-5">
 						<h1 class="fw-bold">Services</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur<br>
-							adipisicing elit. Non, quo.</p>
 					</div>
 				</div>
 			</div>
@@ -379,7 +373,7 @@
 									src="images/motor.png"></div>
 							<h2 class="card-title text-center mb-2">Free Delivery</h2>
 							<hr>
-							<p class="lead">We provide free delivery service for a minimum purchase of (2kg), within the
+								<p class="lead">We provide free delivery service for a minimum purchase of (2kg), within the
 								Cordova area only. However, for customers located outside Cordova,
 								a delivery fee will be charged based on your location.</p>
 						</div>
@@ -457,7 +451,7 @@
 					</div>
 				</div>
 				<hr>
-				<p class="text-center mt-2">Copyright © 2022 . Charlyn's Seafood Essentials. All Rights Reserved</p>
+				<p class="text-center mt-2">Copyright © 2023 . Charlyn's Seafood Essentials. All Rights Reserved</p>
 			</div>
 		</div>
 	</footer>
