--- a/pages/customer/basket.html
+++ b/pages/customer/basket.html
@@ -177,7 +177,8 @@
                                                 <input type="text" class="form-control" placeholder="NGOJO" readonly>
                                             </div>
                                             <div class="mb-2">
-                                                <input type="text" class="form-control" placeholder="IBABAO CORDOVA" readonly>
+                                                <input type="text" class="form-control" placeholder="IBABAO CORDOVA"
+                                                    readonly>
                                             </div>
                                             <div class="mb-2">
                                                 <input type="text" class="form-control" placeholder="DANGGIT" readonly>
@@ -186,17 +187,20 @@
                                                 <input type="number" class="form-control" placeholder="3" readonly>
                                             </div>
                                             <div class="mb-2">
-                                                <input type="text" class="form-control" placeholder="5:00 min left" readonly>
+                                                <div class="mb-2">
+                                                    <input type="time">
+                                                </div>
                                             </div>
                                             <div class="mb-2">
-                                                <input type="number" class="form-control" placeholder="10-12-2023" readonly>
+                                                <input type="number" class="form-control" placeholder="10-12-2023"
+                                                    readonly>
                                             </div>
                                             <button type="submit" class="mt-3"><a
-                                                class="btn-product text-decoration-none text-dark"
-                                                href="/pages/customer/home.html">Cancel Order</a></button>
-                                                <button type="submit" class="mt-3"><a
-                                                class="btn-product text-decoration-none text-dark"
-                                                href="/pages/customer/home.html">Message</a></button>
+                                                    class="btn-product text-decoration-none text-dark"
+                                                    href="/pages/customer/home.html">Cancel Order</a></button>
+                                            <button type="submit" class="mt-3"><a
+                                                    class="btn-product text-decoration-none text-dark"
+                                                    href="/pages/customer/home.html">Message</a></button>
                                         </form>
                                     </div>
                                 </div>
@@ -211,7 +215,7 @@
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
-    <script src="/js/collapse.js" ></script>
+    <script src="/js/collapse.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- End Bootstrap -->
