--- a/pages/customer/gallery.html
+++ b/pages/customer/gallery.html
@@ -129,48 +129,9 @@
                         <div class="col-12 col-md-12 col-lg-6 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
+                                    <h3 class="card-title">Loyal Customer</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
-                                    <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
-                            <div class="card text-center pb-2">
-                                <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
-                                    <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
-                            <div class="card text-center pb-2">
-                                <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
-                                    <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
-                            <div class="card text-center pb-2">
-                                <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
+                                            src="/images/carl.jpg"></div>
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#view"
                                             class="btn btn-info btn-sm mt-3 mx-2">View</button>
@@ -202,15 +163,17 @@
                                                 <input type="text" class="form-control" placeholder="Ngojo" readonly>
                                             </div>
                                             <div class="mb-2">
-                                                <input type="text" class="form-control" placeholder="Ibabao Cordova" readonly>
+                                                <input type="text" class="form-control" placeholder="Ibabao Cordova"
+                                                    readonly>
                                             </div>
                                             <div class="mb-2">
-                                                <label  for="">Caption:</label>
-                                                <input type="text" class="form-control" placeholder="Thankyou for Trusting CSE ^_^ " readonly>
+                                                <label for="">Caption:</label>
+                                                <input type="text" class="form-control"
+                                                    placeholder="Thankyou for Trusting CSE ^_^ " readonly>
                                             </div>
                                             <div class="mb-2">
                                                 <label for="">Picture</label>
-                                                    <input type="image" src="..">
+                                                <input type="image" src="..">
                                             </div>
                                         </form>
                                     </div>
@@ -226,7 +189,7 @@
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
-    <script src="/js/collapse.js" ></script>
+    <script src="/js/collapse.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- End Bootstrap -->
