--- a/pages/customer/profile.html
+++ b/pages/customer/profile.html
@@ -175,9 +175,7 @@
                                             <div class="mb-2">
                                                 <input type="text" class="form-control" placeholder="Enter Number">
                                             </div>
-                                            <button type="submit" class="btn btn-primary mt-3"><a
-                                                class="text-decoration-none text-dark"
-                                                href="#">Update</a></button>
+                                            <input type="button" onclick="updateContent()" value="Update">
                                         </form>
                                     </div>
                                 </div>
@@ -193,9 +191,18 @@
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
     <script src="/js/collapse.js" ></script>
+    <script src="/js/sweetalert.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- End Bootstrap -->
+
+     <script>
+        window.addEventListener('load',function(){
+        });
+        function updateContent() {
+            swal("Congrats!", "Profile has been updated", "success");
+        }
+    </script>
 </body>
 
 </html>
